--- a/tensorflow/5min_MLP_modified_gaussian_normalization.ipynb
+++ b/tensorflow/5min_MLP_modified_gaussian_normalization.ipynb
@@ -1882,7 +1882,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "eng",
       "language": "python",
       "name": "python3"
     },
@@ -1896,7 +1896,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.10.17"
     }
   },
   "nbformat": 4,
