--- a/pytorch/mlp_pipeline.ipynb
+++ b/pytorch/mlp_pipeline.ipynb
@@ -2645,30 +2645,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "id": "f5f33e55",
       "metadata": {},
       "outputs": [],
-      "source": [
-        "loss_2 = trainer.history\n",
-        "with open('MLP_Worst.csv', 'w') as f:\n",
-        "    pd.DataFrame(loss_2).to_csv(f, index=False)"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "78d4fd71",
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.read_csv('MLP_Best.csv')\n",
-        "loss = df['eval_loss'].tolist()\n"
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "id": "30ecf126",
       "metadata": {},
       "outputs": [
@@ -2684,6 +2679,13 @@
         }
       ],
       "source": [
+        "df = pd.read_csv('MLP_Best.csv')\n",
+        "loss = df['eval_loss'].tolist()\n",
+        "\n",
+        "loss_2 = trainer.history\n",
+        "with open('MLP_Worst.csv', 'w') as f:\n",
+        "    pd.DataFrame(loss_2).to_csv(f, index=False)\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def plot_loss_curves(\n",
